# src/models/transaction.model.ts
@@ -1,0 +1,5 @@
+export class TransactionModel {
+  destiny_card!: string;
+  amont!: string;
+  origin_card!: string;
+}
