# swagger.json
@@ -19,6 +19,10 @@
     {
       "name": "Auth",
       "description": "Api for client auth in the sistem"
+    },
+    {
+      "name": "Transaction",
+      "description": "Api for transaction in the sistem"
     }
   ],
   "schemes": ["http"],
@@ -197,6 +201,78 @@
                 }
               }
             }
+          }
+        }
+      }
+    },
+    "/api/v1/client/transaction/": {
+      "post": {
+        "tags": ["Transaction"],
+        "summary": "Crear una nueva Transaction",
+        "parameters": [
+          {
+            "name": "transaction",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "destiny_card": {
+                  "type": "string",
+                  "required": true
+                },
+                "amont": {
+                  "type": "number",
+                  "required": true
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Historia de transaciones",
+            "schema": {
+              "type": "array",
+              "items": {
+                "type": "object",
+                "properties": {
+                  "amount": {
+                    "type": "string"
+                  },
+                  "origin_card": {
+                    "type": "string"
+                  },
+                  "destiny_card": {
+                    "type": "string"
+                  },
+                  "date": {
+                    "type": "string"
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/v1/client//transaction/delete/{id}/": {
+      "parameters": [
+        {
+          "name": "id",
+          "in": "path",
+          "required": true,
+          "type": "integer",
+          "description": "Id para buscar la transacion a borrar"
+        }
+      ],
+      "delete": {
+        "tags": ["Transaction"],
+        "description": "Solo el admin puede borra transaciones",
+        "summary": "Borrar una transacion",
+        "responses": {
+          "200": {
+            "description": "ok"
           }
         }
       }
